docs: fix missing request body create user endpoint
