# internal/users/handler.go
@@ -72,7 +72,8 @@ func (h UserHandler) GetUserById(c echo.Context) error {
 //	@Produce	json
 //	@Success	201			{object}	UserResponse
 //	@Failure	400			{object}	MessageResponse
-//	@Router		/v1/users 										[post]
+//	@Router		/v1/users 				[post]
+//	@Param		request		body		CreateUserRequest	true	"User"
 func (h UserHandler) CreateUser(c echo.Context) error {
 	userReq := CreateUserRequest{}
 	if err := c.Bind(&userReq); err != nil {
